# kong-naming

./: .gitignore  README.md
naming-update-script/: .env.example  backoff.py  infura_ipfs.py  logger.py  main.py  meta_ipfs_hashes.json  pyproject.toml  replicate.py  server.sh  update-names.sh
naming-update-script/historical/1-10-2021::0:0:12/cids/: hashes.json  root.json
naming-update-script/historical/1-10-2021::0:0:12/diff/: post.json  pre.json
naming-update-script/historical/1-10-2021::0:0:12/meta/: 1002  1031  1059  106  1083  1175  120  1366  1414  1478  1492  152  1649  1670  1697  1763  1783  1866  1931  1933  1969  207  2083  2157  2234  231  2432  2473  2520  2794  2835  2887  2982  310  3166  3189  3204  3215  3321  3323  (+140 more)
naming-update-script/historical/12-10-2021::0:0:14/cids/: hashes.json  root.json
naming-update-script/historical/12-10-2021::0:0:14/diff/: post.json  pre.json
naming-update-script/historical/12-10-2021::0:0:14/meta/: 1034  1095  1107  1120  1177  1188  119  1260  1358  1387  1388  1458  1461  1472  1496  1644  1674  168  1680  1705  1728  1741  1769  1773  1774  1851  1859  1920  1926  2019  2099  2148  2204  2214  2224  2283  2355  2388  2422  2429  (+166 more)
naming-update-script/historical/12-12-2021::0:0:11/cids/: hashes.json  root.json
naming-update-script/historical/12-12-2021::0:0:11/diff/: post.json  pre.json
naming-update-script/historical/12-12-2021::0:0:11/meta/: 11  1201  1228  1278  1340  1359  1386  1406  143  1482  1520  1570  160  1712  1734  1740  1804  183  185  1874  1921  (+181 more)
naming-update-script/scripts/: download-meta.sh
(+9610 files in other folders)
